syntax = "proto3";

package proto;

// Specify the Go package where the generated Go code should reside.
option go_package = "internal/proto";

// The sportsbook service definition.
service SportsbookService {
    // Sends a request to list all permatches available
    rpc ListPrematch (ListPrematchRequest) returns (ListPrematchResponse);
    rpc SendLiveData (LiveOddsRequest) returns (stream LiveData);
    rpc SendLiveScore (LiveScoreRequest) returns (stream LiveScoreData);
}

// The request message containing the information needed to list games.
message ListPrematchRequest {
    // You can add filters or pagination details here if needed
}

// The response message containing the list of games.
message ListPrematchResponse {
    repeated Prematch data = 1;
}

// A Prematch message represents a game in the sportsbook.
message Prematch {
    string id = 1;
    string start_date = 2;
    string home_team = 3;
    string away_team = 4;
    bool is_live = 5;
    bool is_popular = 6;
    string tournament = 7;
    string status = 8;
    string sport = 9;
    string league = 10;
    TeamInfo home_team_info = 11;
    TeamInfo away_team_info = 12;
    string statsperform_id = 13;
    repeated Odds odds = 14;
}

message Odds {
    string id = 1;
    string sports_book_name = 2;
    string name = 3;
    double price = 4;
    double timestamp = 5;
    double bet_points = 6;
    bool is_main = 7;
    bool is_live = 8;
    string market_name = 9;
    string market = 10;
    double home_rotation_number = 11;
    double away_rotation_number = 12;
    string deep_link_url = 13;
    string player_id = 14;
    string selection = 15;
    string normalized_selection = 16;
    string selection_line = 17;
    double selection_points = 18;
}

message TeamInfo {
    string id = 1;
    string team_name = 2;
    string team_city = 3;
    string team_mascot = 4;
    string team_abbreviation = 5;
    string sport = 6;
    string league = 7;
}

message LiveOddsRequest {
    // Add any request fields if necessary
}

message LiveScoreRequest {
    // Add any request fields if necessary
}

enum EventStatus{
  not_active = 0;
  not_started = 1;
  live = 2;
}

enum SettlementStatus{
  unsettled = 0;
  won = 1;
  half_won = 2;
  refunded = 3;
  half_refunded = 4;
  lost = 5;
}

message LiveData {
    oneof data{
        MatchUpdate match = 1;
        LiveOddsData odds = 2;
        MatchResult match_result = 3;
        Settlement settlement = 4;
    }

    message LiveOddsData {
        message OddsData {
            string reference_id = 1;
            double bet_price = 2;
            string game_id = 3;
            bool active = 4;
        }
        string match_id = 1;
        EventStatus status = 2;
        optional bytes game_info = 3;
        repeated OddsData odds = 4;
    }

    message MatchUpdate {
        int32 id = 1;
        int64 match_date = 2;
        int32 sport_id = 3;
        int32 country_id = 4;
        int32 sport_country_id = 5;
        int32 tournament_id = 6;
        int32 home_id = 7;
        int32 away_id = 8;
        EventStatus status = 9;
        bool will_be_live = 10;
        optional int32  betradar_id = 11;
        bool has_stream = 12;
        bool has_scout = 13;
        int32 priority = 14;
        optional bytes match_info = 15;
        int32 hash = 16;
        int64 last_update = 17;
        int32 games_count = 18;
    }
    message MatchResult{
        int32 match_id = 1;
        int32 game_type = 2;
        int32 status = 3;
        string result = 4;
    }
    message Settlement
    {
        int64 odd_id = 1;
        SettlementStatus status = 2;
        optional SettlementStatus old_status = 3;
    }
}

message LiveScoreData {    
    ScoreData data = 1;
    string entry_id = 2;
}

message ScoreData {
    string game_id = 1;
    Score score = 2;
}

message Score {
    string clock = 1;
    double score_away_period_1 = 2;
    double score_away_period_1_tiebreak = 3;
    double score_away_period_2 = 4;
    double score_away_total = 5;
    double score_home_period_1 = 6;
    double score_home_period_1_tiebreak = 7;
    double score_home_period_2 = 8;
    double score_home_total = 9;
}